--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^4.0.4
+  http: ^0.12.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
